; ModuleID = '/home/carl/AnghaBench/TDengine/deps/pthread/extr_pthread_attr_getschedpolicy.c_pthread_attr_getschedpolicy.c'
source_filename = "/home/carl/AnghaBench/TDengine/deps/pthread/extr_pthread_attr_getschedpolicy.c_pthread_attr_getschedpolicy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@SCHED_MAX = common dso_local global i64 0, align 8
@SCHED_OTHER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pthread_attr_getschedpolicy(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i64 @ptw32_is_attr(i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i32*, i32** %5, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %9, %2
  %13 = load i32, i32* @EINVAL, align 4
  store i32 %13, i32* %3, align 4
  br label %24

14:                                               ; preds = %9
  %15 = load i32*, i32** %5, align 8
  %16 = load i64, i64* @SCHED_MAX, align 8
  %17 = inttoptr i64 %16 to i32*
  %18 = icmp ule i32* %15, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %14
  %20 = load i32, i32* @EINVAL, align 4
  store i32 %20, i32* %3, align 4
  br label %24

21:                                               ; preds = %14
  %22 = load i32, i32* @SCHED_OTHER, align 4
  %23 = load i32*, i32** %5, align 8
  store i32 %22, i32* %23, align 4
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %21, %19, %12
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i64 @ptw32_is_attr(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
